# mode

./: .gitignore  .prettierignore  README.md  README_PYTHON.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: cicd.yml
.husky/: pre-commit
scripts/: generate-mixins.ts
src/: index.js  methodConversionHandler.js  methodConversionHandler.ts  modelConversionHandler.js  modelConversionHandler.ts  tree.js
src/data/: model_list.js
src/js/: default_methods.ts  default_models.ts  method.ts  methodConversionHandler.ts  model.ts  modelConversionHandler.ts  tree.ts
src/js/data/: method_list.js  model_list.js
src/js/methods/: factory.ts  pseudopotential.ts
src/js/models/: dft.ts  factory.ts
src/js/types/: external.d.ts  index.ts
src/mode_py.egg-info/: PKG-INFO  SOURCES.txt
src/py/: __init__.py  default_methods.py  default_models.py  method.py  model.py  tree.py
src/py/data/: __init__.py  method_list.py  model_list.py  model_method_map.py
src/py/methods/: __init__.py  factory.py  pseudopotential.py
src/py/models/: __init__.py  dft.py  factory.py
tests/: filter.test.js  methodConversionHandler.test.js  methodConversionHandler.test.ts  model.test.ts  modelConversionHandler.test.js  modelConversionHandler.test.ts
tests/js/: __init__.py  filter.test.js  model.test.js
tests/py/: test_conversion_handlers.py  test_factories.py  test_method.py  test_model.py
tests/py/unit/: test_dft_model.py  test_factories.py  test_method.py  (+6 more)
tests/python/: test_conversion_handlers.py  test_factories.py  test_method.py  test_model.py
(+16 files in other folders)
