[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mode-py"
version = "0.0.0"
description = "MOdel and method DEfinitions - Python version"
authors = [
    {name = "Exabyte Inc.", email = "info@exabyte.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/Exabyte-io/mode.js"
Repository = "https://github.com/Exabyte-io/mode.js.git"
Issues = "https://github.com/Exabyte-io/mode.js/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["py*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests/py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

